--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Meismyself.github.io/MangaDragon",
+  "homepage": "https://meismyself.github.io/MangaDragon",
   "name": "MangaDragon-app",
   "version": "0.1.0",
   "private": true,
